# smish

./: CONTACT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: build.yml
csharp/: SmishAgent.cs
elixir/: smish_node.ex
examples/: README.md  quickstart_python.py
haskell/: SmishSignal.hs
java/: SmishEngine.java
kotlin/: SmishNode.kt
php/: smish_router.php
ruby/: smish_gateway.rb
scala/: SmishFiber.scala
scripts/bash/: smish_cli.sh
smish/: README.md
smish.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
smish/core/: __init__.py  auto_router.py
smish/docs/: WHITEPAPER.md
